--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "xss-clean": "^0.1.1"
   }
 }
