--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-google-token": "^0.1.2",
     "xss-clean": "^0.1.1"
   }
 }
